Changed and finished index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Service 3</h5>
-            <p class="card-text">Service 3 is also super cool.</p>
+            <p class="card-text">Service 3 is super cool.</p>
           </div>
         </div>
       </div>
